Bug 305078 - Clicking on images is broken
Summary: Clicking on images is broken
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui-message-filters (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-13 12:28 UTC by Daniele E. Domenichelli
Modified: 2013-05-29 21:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-08-13 12:28:58 UTC
* When an image is linked it is displayed correctly: http://wstaw.org/m/2012/08/13/snapshot87.png
* When the image is clicked, it is hidden and replaced by "Click to view in browser". There is no space between the actual link and "Click": http://wstaw.org/m/2012/08/13/snapshot88.png
* When the link is clicked, the image is shown again, but it is no longer resized: http://wstaw.org/m/2012/08/13/snapshot89.png
Comment 1 David Edmundson 2013-05-29 21:04:05 UTC
Git commit 1ca6b1b7086626b8c0c34928f45d18f4f72024a5 by David Edmundson.
Committed on 29/05/2013 at 20:55.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Remove alt tag from images inserted with ImageFilter

This alt tag never actually showed up (not sure why).
Removing this means the emoticon -> text swapping no longer occurs so images
remain after clicked
REVIEW: 110717

M  +1    -3    filters/images/images-filter.cpp

http://commits.kde.org/telepathy-text-ui/1ca6b1b7086626b8c0c34928f45d18f4f72024a5