Remove alt tag from images inserted with ImageFilter

This alt tag never actually showed up (not sure why).
Removing this means the emoticon -> text swapping no longer occurs so images
remain after clicked

BUG: 305078
REVIEW: 110717